fix graph is not showing

--- a/static/gwml2/css/main.css
+++ b/static/gwml2/css/main.css
@@ -650,3 +650,109 @@ table td div.error::after {
 .measurement-chart {
     max-width: 1000px;
 }
+
+/* additional */
+@media screen and (max-width: 1730px) {
+    input[name="top_depth_value"], input[name="bottom_depth_value"], input[name="bottom_depth_value"],
+    input[name="diameter_value"], input[name="quality_value"], input[name="value_value"] {
+        max-width: 60px;
+    }
+
+    input[name="stratigraphic_unit"] {
+        max-width: 40px;
+    }
+}
+
+@media screen and (max-width: 1430px) {
+    input[name="material"] {
+        max-width: 80px;
+    }
+
+    textarea[name="description"] {
+        max-width: 120px;
+    }
+
+    select[name="parameter"] {
+        max-width: 240px;
+    }
+}
+
+.well-chart-row:before {
+    display: table;
+}
+
+.well-chart-row {
+    padding-top: 10px;
+    min-height: 600px;
+    padding-bottom: 25px;
+}
+
+.column-25 {
+    width: 25%;
+    float: left;
+}
+
+.column-75 {
+    width: 75%;
+    float: left;
+}
+
+.column-50 {
+    width: 50%;
+    float: left;
+    padding: 15px;
+}
+
+.height-100 {
+    height: 150px;
+}
+
+.well-table-container {
+    height: 430px;
+    overflow-y: auto;
+    background-color: #ffffff;
+    box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.07);
+    max-width: 750px;
+}
+
+.well-table-container tbody td:first-child {
+    width: 50%;
+}
+
+.well-table-container .table-description {
+    clear: both;
+}
+
+.title {
+    color: #24619d;
+    width: 50%;
+}
+
+.well-table-container td {
+    border: 1px solid #ebebeb;
+    padding: 10px 18px;
+    color: #333333;
+    font-size: 14px;
+    line-height: 1.4;
+}
+
+.table-description {
+    padding: 20px;
+    line-height: 1.4;
+    clear: both;
+}
+
+.well-info {
+    line-height: 200px;
+    height: 100%;
+    position: relative;
+}
+
+.well-info p {
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #24619d;
+}
